--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,12 +8,25 @@ on:
       - v*
   workflow_dispatch:
 
-env:
-  DUMMY: "1"
-
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: npx forta-agent info
+
+      - run: npm ci
+
+      - name: Setup keyfile
+        env:
+          KEYFILE_PASSWORD: "${{ secrets.FORTA_AGENT_KEYFILE_PASSWORD }}"
+        run: |
+          mkdir -p ~/.forta
+          export KEYFILE_NAME="UTC--2023-01-11T11:43:52.796Z--5bc765ef075b51eb86a640cd41dc055883133f49"
+          printf '${{ secrets.FORTA_AGENT_KEYFILE }}' > ~/.forta/"$KEYFILE_NAME"
+          jq '{"agentId": .agentId, "keyfilePassword": env.KEYFILE_PASSWORD, "keyfile": env.KEYFILE_NAME}' forta.config.json > ~/.forta/forta.config.json
+
+      - name: Publish
+        run: npx forta-agent publish --config ~/.forta/forta.config.json
+
+      - name: Cleanup
+        run: rm -fr ~/.forta
