--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ensuro-balance-monitoring",
-  "version": "0.0.2",
-  "description": "Forta agent for monitoring balance for Ensuro's operational accounts",
+  "name": "ensuro-monitoring",
+  "version": "0.1.1",
+  "description": "Forta agent for monitoring the Ensuro protocol",
   "chainIds": [
     137
   ],
