Temporarily disable gas balance handler, until we fix the false positives

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "enabled": ["gasBalance", "tokenBalance", "dummy"],
+  "enabled": ["tokenBalance"],
   "minIntervalSeconds": 7200,
   "erc20Tokens": {
     "USDC": {
