Add rollbar error reporting

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "@ensuro/core": "^2.0.1",
     "big.js": "^6.2.1",
-    "forta-agent": "^0.1.16"
+    "forta-agent": "^0.1.16",
+    "rollbar": "^2.26.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.1",
