--- a/.github/workflows/gitleaks.yaml
+++ b/.github/workflows/gitleaks.yaml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   gitleaks:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
       - uses: actions/checkout@v1
       - name: gitleaks-action
