--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,14 +2,14 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     strategy:
       matrix:
