Add BMA PA and RM to monitoring

--- a/src/config.json
+++ b/src/config.json
@@ -63,6 +63,12 @@
           "address": "0xCCf5C404d32eB6E777088AB13837a1b8dCBA9328",
           "warnThresh": "0.3",
           "critThresh": "0.5"
+        },
+        {
+          "name": "PA Koala BMA",
+          "address": "0xc1A74eaC52a195E54E0cd672A9dAB023292C6100",
+          "warnThresh": "0.95",
+          "critThresh": "0.99"
         }
       ]
     },
@@ -77,6 +83,12 @@
         {
           "name": "Koala Partner B",
           "address": "0x37fE456EFF897CB5dDF040A5e95f399EaBc162ca",
+          "warnThresh": "0.5",
+          "critThresh": "0.7"
+        },
+        {
+          "name": "Koala BizAway BMA",
+          "address": "0x3eaB5b880b83607288744F35E778D60d0cd6539f",
           "warnThresh": "0.5",
           "critThresh": "0.7"
         }
