--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,4 +21,13 @@ repos:
     rev: v8.12.0
     hooks:
       - id: gitleaks-docker
-# TODO: add solhint
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v3.0.0"
+    hooks:
+      - id: prettier
+
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v8.45.0"
+    hooks:
+      - id: eslint
