Ree enable paLoanLimits monitor

--- a/src/config.json
+++ b/src/config.json
@@ -19,6 +19,10 @@
     {
       "name": "etkUtilizationRate",
       "runEvery": 270
+    },
+    {
+      "name": "paLoanLimits",
+      "runEvery": 270
     }
   ],
   "txEnabled": ["failedTransactions"],
