--- a/src/config.json
+++ b/src/config.json
@@ -192,19 +192,13 @@
           "critThresh": "0.7"
         },
         {
-          "name": "Koala BizAway BMA",
+          "name": "Koala BMA",
           "address": "0x3eaB5b880b83607288744F35E778D60d0cd6539f",
-          "warnThresh": "0.95",
-          "critThresh": "0.97"
+          "warnThresh": "0.97",
+          "critThresh": "0.99"
         },
         {
-          "name": "Koala Partner B",
-          "address": "0x37fE456EFF897CB5dDF040A5e95f399EaBc162ca",
-          "warnThresh": "0.5",
-          "critThresh": "0.7"
-        },
-        {
-          "name": "Koala v2",
+          "name": "Koala Legacy",
           "address": "0xa65c9dE776d1f30c095EFF9C775E001a1d366df8",
           "warnThresh": "0.8",
           "critThresh": "0.9"
